--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ node_modules
 ant-trail-backup.html
 ant-trail-backup-2.html
 remix-code.js
+ant-trail-7.backup.html
+ant-trail-7-working-backup.html
