adds silver enemy

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ ant-trail-backup-2.html
 remix-code.js
 ant-trail-7.backup.html
 ant-trail-7-working-backup.html
+space-tanks-2 copy 2.html
+space-tanks-2 copy.html
+space-tanks-2-3.html
