fixes audio toggle focus issue

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,7 @@ space-tanks-2 copy 2.html
 space-tanks-2 copy.html
 space-tanks-2-3.html
 space-tanks-2-4.html
-space-tanks-2-code-map.md
+
 space-tanks-2-5.html
+space-tanks-2-6-aud toggle nearly fixed.html
+space-tanks-2-code-map.md
