sound refactored to prevent interruption of background audio on mobile when muted. But the focus issue on the audio button causinf re-toggle effect on spacebar shooting has come back

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ space-tanks-2-4.html
 space-tanks-2-5.html
 space-tanks-2-6-aud toggle nearly fixed.html
 space-tanks-2-code-map.md
+space-tanks-2-7-autoggle works nut interferes.html
