--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ space-tanks-2-5.html
 space-tanks-2-6-aud toggle nearly fixed.html
 space-tanks-2-code-map.md
 space-tanks-2-7-autoggle works nut interferes.html
+space-entropy-3-backup.html
