--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@ space-tanks-2-6-aud toggle nearly fixed.html
 space-tanks-2-code-map.md
 space-tanks-2-7-autoggle works nut interferes.html
 space-entropy-3-backup.html
+
+leaderboard-integration.js
+leaderboard-ui.html
+space-entropy-3-backup copy.html
+space-entropy-3-fixed.html
+space-entropy-3-original.html
+space-entropy-3.html
+space-entropy-3.html
