adds a backup copy zen-space-entropy-backup to gitignore. Cuts star wars placeholder text to approx 500 characters

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ space-entropy-3-original.html
 space-entropy-3.html
 space-entropy-3.html
 space-entropy-leaderb.html
+zen-space-entropy-backup.html
