improved the anim settings

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ space-entropy-3.html
 space-entropy-3.html
 space-entropy-leaderb.html
 zen-space-entropy-backup.html
+zen-space-entropy-backup-2.html
