--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ space-entropy-3.html
 space-entropy-leaderb.html
 zen-space-entropy-backup.html
 zen-space-entropy-backup-2.html
+zen-space-entropy-backup-3.html
