adds the first attempt at the user text feature - it's nearly there, need to add the local saving feature and add some intital placeholder text

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ space-entropy-leaderb.html
 zen-space-entropy-backup.html
 zen-space-entropy-backup-2.html
 zen-space-entropy-backup-3.html
+zen-space-entropy-backup-3 copy.html
