adds flag to check if animation sequence is running to stop gameplay resetting animation

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ zen-space-entropy-backup.html
 zen-space-entropy-backup-2.html
 zen-space-entropy-backup-3.html
 zen-space-entropy-backup-3 copy.html
+zen-space-entropy-backup-4.html
+.gitignore
+zen-entropy-gemini.html
+zen-entropy-gemini-2.html
