usertext saving function now works, except on opening new file it goes straight to the game over screen with the previous (pre-save) score in place

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ zen-space-entropy-backup-4.html
 zen-entropy-gemini.html
 zen-entropy-gemini-2.html
 star_wars_crawl-test.txt
+zen-space-entropy-usertext2.html
+zen-space-entropy-usertext.html
+zen-space-entropy-usertext-3.html
