fixed the user save issue of save game not starting from start screen by moving button to start screen

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,19 @@ star_wars_crawl-test.txt
 zen-space-entropy-usertext2.html
 zen-space-entropy-usertext.html
 zen-space-entropy-usertext-3.html
+zen-space-entropy-2.html
+zen-space-entropy-deadend.html
+zen-space-entropy-usertext-4.html
+zen-space-entropy-usertext-5.html
+zen-space-entropy-usertext-6.html
+zen-space-entropy-usertext-7.html
+zen-space-entropy-usertext-8.html
+zen-space-entropy-usertext-9.html
+zen-space-entropy-usertext-10.html
+zen-space-entropy-usertext-11.html
+zen-space-entropy-usertext-12.html
+zen-space-entropy-usertext-13.html
+zen-space-entropy-usertext-14.html
+zen-space-entropy-usertext-15.html
+zen-space-entropy-usertext-16.html
+zen-space-entropy-usertext-17.html
