--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,9 @@ zen-space-entropy-usertext-14.html
 zen-space-entropy-usertext-15.html
 zen-space-entropy-usertext-16.html
 zen-space-entropy-usertext-17.html
+zen-space-entropy-goodbackup.html
+zen-space-entropy-usertext-18.html
+zen-space-entropy-code-inspection.md
+zen-space-entropy-goodbackup-2.html
+zen-space-entropy-usertext-19.html
+zen-space-entropy-usertext-20.html
