--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ zen-space-entropy-code-inspection.md
 zen-space-entropy-goodbackup-2.html
 zen-space-entropy-usertext-19.html
 zen-space-entropy-usertext-20.html
+zen-space-entropy-usertext-21.html
