--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ zen-space-entropy-goodbackup-2.html
 zen-space-entropy-usertext-19.html
 zen-space-entropy-usertext-20.html
 zen-space-entropy-usertext-21.html
+zen-space-entropy-usertext-22.html
