redesign of the write modal

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ zen-space-entropy-usertext-19.html
 zen-space-entropy-usertext-20.html
 zen-space-entropy-usertext-21.html
 zen-space-entropy-usertext-22.html
+zen-space-entropy-usertext-23.html
+write_modal_rework_plan.md
