commit before tackling the 'ghost version txt' issue
Summary of Changes:

JavaScript Updated (createTextBlockElement function):
The code responsible for creating the red "X" delete button (element with class remove-block-button) within each text block has been removed.
The event listener attached to this button, which handled block deletion and called updateCrawlTextsArray(), has also been removed.
CSS Updated:
The CSS rules styling .remove-block-button (including its background, color, border, font, padding, etc.) have been deleted.
The CSS rules for the .remove-block-button:hover state have also been deleted.
These changes effectively remove the individual delete buttons from the "Write Your Story" modal, simplifying the UI as requested. The updateCrawlTextsArray function is no longer called when a block is (now not) deleted, but processAndStoreCrawlTexts (which updateCrawlTextsArray calls) will still correctly process the existing blocks when the "Save" button is clicked.

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,20 @@ zen-space-entropy-usertext-21.html
 zen-space-entropy-usertext-22.html
 zen-space-entropy-usertext-23.html
 write_modal_rework_plan.md
+zen-space-entropy-usertext-24.html
+zen-space-entropy-usertext-25.html
+zen-space-entropy-usertext-26.html
+zen-space-entropy-usertext-27.html
+zen-space-entropy-usertext-28.html
+zen-space-entropy-usertext-29.html
+zen-space-entropy-usertext-30.html
+zen-space-entropy-usertext-31.html
+zen-space-entropy-usertext-32.html
+zen-space-entropy-usertext-33.html
+zen-space-entropy-usertext-34.html
+zen-space-entropy-usertext-35.html
+zen-space-entropy-usertext-36.html
+zen-space-entropy-usertext-37.html
+zen-space-entropy-usertext-38.html
+zen-space-entropy-usertext-39.html
+zen-space-entropy-usertext-40.html
