fixed the ghost text bug of text appearing from previous generation Summary of Changes:
Modified the handleSaveButtonClick function in /Users/robertstanley/projects/html-fun/zen-space-entropy.html.
Before the HTML content is packaged for saving, the section for the Star Wars crawl (#star-wars-crawl-container and #star-wars-crawl-content) is now programmatically reset to its default placeholder state within the HTML string being saved. This involves clearing any dynamically added text and inline styles from these elements.

--- a/.gitignore
+++ b/.gitignore
@@ -79,4 +79,8 @@ zen-space-entropy-usertext-36.html
 zen-space-entropy-usertext-37.html
 zen-space-entropy-usertext-38.html
 zen-space-entropy-usertext-39.html
+zen-space-entropy-usertext-41.html
 zen-space-entropy-usertext-40.html
+zen-space-entropy-usertext-42.html
+zen-space-entropy-usertext-43.html
+zen-space-entropy-usertext-44.html
