changes the info text and adds a link that refreshes page

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ zen-space-entropy-usertext-40.html
 zen-space-entropy-usertext-42.html
 zen-space-entropy-usertext-43.html
 zen-space-entropy-usertext-44.html
+zen-space-entropy-usertext-45.html
